# dictionary

./: .env  Cargo.toml  README.md
.temp/: nagmani.txt  nagmani1.txt
src/: handlers.rs  main.rs  models.rs  routes.rs  store.rs  utils.rs
