[package]
name = "dictionary"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.15"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
derive_more = "2.0.1"
futures = "0.3"
env_logger = "0.10"
rayon = "1.10.0"
log = "0.4"
dotenv = "0.15"
